Server/compiling_error.txt
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:8:11: error: '::main' must return 'int'
 void main() {
           ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp: In function 'int main()':
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:16:5: error: return-statement with no value, in function returning 'int' [-fpermissive]
     return;
     ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:23:5: error: return-statement with no value, in function returning 'int' [-fpermissive]
     return;
     ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:44:5: error: return-statement with no value, in function returning 'int' [-fpermissive]
     return;
     ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:53:36: error: too few arguments to function 'int getnameinfo(const sockaddr*, socklen_t, char*, DWORD, char*, DWORD, int)'
   if(getnameinfo((sockaddr*)&client), sizeof(client), host, NI_MAXHOST, service, NI_MAXSERV, 0) == 0){
                                    ^
In file included from C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:2:0:
D:/CodeBlocks/TDM/x86_64-w64-mingw32/include/WS2tcpip.h:265:34: note: declared here
   WINSOCK_API_LINKAGE int WSAAPI getnameinfo(const struct sockaddr *sa,socklen_t salen,char *host,DWORD hostlen,char *serv,DWORD servlen,int flags);
                                  ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:53:97: error: expected primary-expression before '==' token
   if(getnameinfo((sockaddr*)&client), sizeof(client), host, NI_MAXHOST, service, NI_MAXSERV, 0) == 0){
                                                                                                 ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:56:58: error: 'inet_ntop' was not declared in this scope
     inet_ntop(AF_INET, &client.sin_addr, host, NI_MAXHOST);
                                                          ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:57:68: error: 'ntohos' was not declared in this scope
     cout << host << " connected on port " << ntohos(client.sin_port) << endl;
                                                                    ^
C:\Users\nicol\Documents\GitHub\Mini_Project_Programming\Server\Server.cpp:71:5: error: expected ',' or ';' before 'if'
     if(bytesRecieved == SOCKET_ERROR){
     ^
